--- a/punto_venta/Properties/Resources.resx
+++ b/punto_venta/Properties/Resources.resx
@@ -124,13 +124,16 @@
   <data name="icon_add" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_add.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icon_ventas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_ventas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icon_datos" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_datos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icon_cancel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icon_cancel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icon_ventas" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icon_ventas.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icon_datos2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icon_datos2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
